# YT-Bot

./: README.md  package-lock.json  package.json
chroma_store/4YgV55DZPQ0/: chroma.sqlite3
chroma_store/Gfr50f6ZBvo/: chroma.sqlite3
chroma_store/W4tqbEmplug/: chroma.sqlite3
chroma_store/kg6KYPnaFjc/: chroma.sqlite3
server/: .gitignore  pyproject.toml  rag_backend.py  server.py
src/app/: layout.js  page.js
src/app/ask/: page.js
src/app/components/: YTInput.js
